src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/declMethNoThis.deca
// Description:
//    Appel à une méthode sans this dans une classe ne possédant pas la méthode
//
// Resultats:
//    Erreur contextuelle ligne 20
//    identificateur non défini
class A{

    int x;

    void setX(int y){
        x = y;
    }
    void test(int y){
        setX(y);
    }
}
class B{
    void test(int y){
        setX(y);
    }
}


